# atlassian-jira-rest-types

./: Cargo.toml
src/: lib.rs  schema-v2.json  schema-v3.json
